SUBDIRS = src

man_MANS = xplanet.1
EXTRA_DIST = README.config xplanet.1

nobase_dist_data_DATA = \
	xplanet/rgb.txt			\
	xplanet/arcs/README		\
	xplanet/config/default		\
	xplanet/config/earth_markers	\
	xplanet/config/moon_orbit	\
	xplanet/config/overlay_clouds	\
	xplanet/fonts/README		\
	xplanet/fonts/FreeSans.ttf	\
	xplanet/images/README		\
	xplanet/images/earth.jpg	\
	xplanet/images/night.jpg	\
	xplanet/images/hubble.png       \
	xplanet/images/shuttle.png      \
	xplanet/images/sublunar.png	\
	xplanet/images/iss.png          \
	xplanet/images/smile.png        \
	xplanet/images/subsolar.png	\
	xplanet/markers/earth		\
	xplanet/origin/README		\
	xplanet/origin/cassini		\
	xplanet/origin/galileo		\
	xplanet/satellites/iss		\
	xplanet/satellites/iss.tle	\
	xplanet/stars/BSC
